# patchwork

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: diff.rs  lib.rs  myers.rs  recursive.rs  serialization.rs
src/myers/: mod.rs  types.rs
src/patch/: mod.rs  types.rs
src/recursive/: diffable.rs  mod.rs  types.rs
tests/: integration.rs
